<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="20dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/setting_back_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/setting_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/setting_back_iv"
            app:layout_constraintBottom_toBottomOf="@id/setting_back_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/setting_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/setting_back_iv"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/setting_profile_iv"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@color/background_gray"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@id/setting_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintTop_toTopOf="@id/setting_profile_iv"
            app:layout_constraintBottom_toBottomOf="@id/setting_profile_iv"
            app:layout_constraintStart_toStartOf="@id/setting_profile_iv"
            app:layout_constraintEnd_toEndOf="@id/setting_profile_iv"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/setting_profile_iv"
            app:layout_constraintBottom_toBottomOf="@id/setting_profile_iv"
            app:layout_constraintStart_toEndOf="@id/setting_profile_iv">

            <TextView
                android:id="@+id/settig_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_id"
                android:textSize="14sp"
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/setting_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_name"
                android:textSize="17sp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/setting_review_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_myreview"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/top_layout"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"/>

    <ImageView
        android:id="@+id/setting_next_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/back_next"
        android:layout_marginEnd="29dp"
        app:layout_constraintTop_toTopOf="@id/setting_review_tv"
        app:layout_constraintBottom_toBottomOf="@id/setting_review_tv"
        app:layout_constraintEnd_toEndOf="@id/setting_review_tv"/>

    <TextView
        android:id="@+id/setting_guild_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_guide"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_review_tv"/>

    <TextView
        android:id="@+id/setting_notice_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_notice"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:background="@drawable/border_10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/setting_guild_tv"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"/>

    <TextView
        android:id="@+id/setting_agree_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_agree"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:background="@drawable/border_10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/setting_notice_tv"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"/>

    <TextView
        android:id="@+id/setting_way_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_way"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:background="@drawable/border_10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/setting_agree_tv"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"/>

    <TextView
        android:id="@+id/setting_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_account"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_way_tv"/>

    <TextView
        android:id="@+id/setting_logout_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_logout"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:background="@drawable/border_10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/setting_account_tv"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"/>

    <TextView
        android:id="@+id/setting_withdrawal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_withdrawal"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:background="@drawable/border_10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/setting_logout_tv"
        android:layout_marginTop="14dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>