<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="12dp"
    android:paddingBottom="18dp"
    android:background="@drawable/style_dialog_radius_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_my_review_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    <ImageView
        android:id="@+id/item_my_review_img_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/style_contents"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_my_review_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myreview_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/item_my_review_iv"
        app:layout_constraintStart_toEndOf="@id/item_my_review_iv"/>

    <RatingBar
        android:id="@+id/item_star_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progressTint="@color/orange"
        android:backgroundTint="@color/light_gray"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="1"
        android:stepSize="1.0"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/item_my_review_title_tv"
        app:layout_constraintStart_toStartOf="@id/item_my_review_title_tv"/>

    <TextView
        android:id="@+id/myreview_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myreview_date"
        android:textColor="@color/gray"
        android:layout_marginEnd="2dp"
        android:textSize="9sp"
        app:layout_constraintTop_toTopOf="@id/item_my_review_title_tv"
        app:layout_constraintBottom_toBottomOf="@id/item_my_review_title_tv"
        app:layout_constraintEnd_toEndOf="@id/myreview_content_tv"/>

    <TextView
        android:id="@+id/myreview_content_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/myreview_content"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_star_layout"
        app:layout_constraintStart_toStartOf="@id/item_star_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>