<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_light"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/clear"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_card_view_cv"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/signup_card_view_cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="89dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="-15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="31dp"
            android:paddingEnd="31dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/signup_input_image_iv"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:src="@color/light_gray"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_student_id_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                app:counterMaxLength="8"
                app:errorEnabled="true"
                app:hintTextColor="@color/gray"
                app:boxStrokeColor="@color/dark_gray"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/signup_input_image_iv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_student_id_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_id"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_student_id_double_check_btn"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:text="@string/double_check"
                android:textColor="@color/dark_gray"
                android:background="@drawable/style_double_check_btn"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/signup_student_id_layout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_nickname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/gray"
                app:boxStrokeColor="@color/dark_gray"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_student_id_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_nickname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_nickname_double_check_btn"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:text="@string/double_check"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:background="@drawable/style_double_check_btn"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/signup_nickname_layout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/gray"
                app:boxStrokeColor="@color/dark_gray"
                app:passwordToggleEnabled="true"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_nickname_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password_check_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/gray"
                app:boxStrokeColor="@color/dark_gray"
                app:passwordToggleEnabled="true"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password_check_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_check"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_signup_btn"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/signup_btn"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/border_10dp_orange_trans_active"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_marginTop="49dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_password_check_layout"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>