<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/setting_back_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/setting_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_update_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/setting_back_iv"
            app:layout_constraintBottom_toBottomOf="@id/setting_back_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_btn"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/setting_title_tv"
            app:layout_constraintBottom_toBottomOf="@+id/setting_title_tv"/>

        <View
            android:id="@+id/setting_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_gray"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/setting_back_iv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/setting_profile_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_img"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_layout"/>

    <TextView
        android:id="@+id/profile_nickname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_profile_iv"/>

    <EditText
        android:id="@+id/profile_nickname_et"
        android:layout_width="242dp"
        android:layout_height="38dp"
        android:background="@drawable/border_10dp_stroke"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14dp"
        android:textColorHint="@color/hint_gray"
        android:hint="닉네임을 입력해 주세요."
        app:layout_constraintStart_toStartOf="@+id/profile_nickname_tv"
        app:layout_constraintTop_toBottomOf="@+id/profile_nickname_tv"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="중복 확인"
        android:stateListAnimator="@null"
        android:layout_marginStart="10dp"
        android:background="@drawable/style_double_check_btn"
        app:layout_constraintStart_toEndOf="@+id/profile_nickname_et"
        app:layout_constraintTop_toTopOf="@+id/profile_nickname_et"/>
</androidx.constraintlayout.widget.ConstraintLayout>